Fix overflow fix

--- a/app/javascript/app/components/charts/legend-chart/legend-chart-styles.scss
+++ b/app/javascript/app/components/charts/legend-chart/legend-chart-styles.scss
@@ -4,7 +4,7 @@
   display: flex;
   overflow: scroll;
 
-  @include overflowFix(250px);
+  @include overflowFix('large');
 
   padding-top: 260px;
 
