--- a/app/javascript/app/components/country/country-timeline/country-timeline-styles.scss
+++ b/app/javascript/app/components/country/country-timeline/country-timeline-styles.scss
@@ -16,7 +16,7 @@
 .timelineContainer {
   overflow-x: auto;
 
-  @include overflowFix(120px);
+  @include overflowFix('small');
 }
 
 .timeline { // overwriting timeline styles
